2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* tests/Makefile.am (EXTRA_DIST): Add list_atomic.c; update
	comment.
	* tests/Makefile.am (CLEANFILES): Remove test_atomic_include.h,
	list_atomic.c.
	* tests/Makefile.am: Remove trailing spaces at EOLn.
	* tests/Makefile.in: Regenerate.

2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* tests/test_stack.c (MAX_NTHREADS, N_EXPERIMENTS): Do not define
	unless undefined.
	* tests/test_stack.c: Expand all tabs to spaces.
	* tests/test_atomic_include.h: Ditto.
	* tests/test_stack.c (main): Free pop'ed elements.
	* tests/test_atomic_include.h (test_atomic, test_atomic_release,
	test_atomic_acquire, test_atomic_read, test_atomic_write,
	test_atomic_full, test_atomic_release_write,
	test_atomic_acquire_read): Remove prototype.

2011-04-22  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/ia64.h (AO_MASK): Add "volatile" for
	asm; remove redundant trailing ';'.

2011-04-11  Ivan Maidanski  <ivmai@mail.ru> (really Jim Meyering)

	* doc/README.txt: Remove doubled words in comments.

2011-03-18  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/arm.h: Test for all the known pre-v6
	ARM chips instead of all the currently existing v6+ ones.

2011-03-13  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/emul_cas.h: Fix a typo in a comment;
	expand all tabs to spaces.
	* src/atomic_ops/sysdeps/gcc/x86.h (AO_test_and_set_full):
	Recognize AO_XCHGB_RET_WORD new macro (to workaround a bug).
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_test_and_set_full):
	Ditto.

2011-02-19  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops.c: Include sys/time.h (to get timespec) for NaCl.
	* src/atomic_ops_malloc.c (msb): Do the shift by 32 only once (in
	a conditional expression) to prevent a compiler warning.
	* src/atomic_ops_malloc.c: Expand all tabs to spaces; remove
	trailing spaces at EOLn.

2011-02-19  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops.c: Explicitly define AO_USE_NO_SIGNALS and