@@ -1,3 +1,14 @@
+2011-05-11  Ivan Maidanski  <ivmai@mail.ru>
+
+	* tests/test_malloc.c: Expand all tabs to spaces; remove trailing
+	spaces at EOLn.
+	* tests/test_malloc.c (LENGTH, LARGE): Rename to LIST_LENGTH and
+	LARGE_OBJ_SIZE, respectively.
+	* tests/test_malloc.c (MAX_NTHREADS, N_REVERSALS, LIST_LENGTH,
+	LARGE_OBJ_SIZE): Do not define unless undefined.
+	* tests/test_malloc.c (run_one_test): Recognize DEBUG_RUN_ONE_TEST
+	macro.
+
 2011-05-10  Ivan Maidanski  <ivmai@mail.ru>
 
 	* tests/Makefile.am (EXTRA_DIST): Add list_atomic.c; update
